--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "horiz-gauge",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Draw a svg horizontal progress gauge",
   "main": "horiz-gauge.js",
   "scripts": {
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/ulfschneider/horiz-gauge#readme",
   "dependencies": {
-    "d3": "^5.7.0"
+    "d3": "^5.7.0",
+    "js-base64": "^2.5.1",
+    "underscore": "^1.9.1"
   }
 }
