--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Draw a svg horizontal progress gauge",
   "main": "horiz-gauge.js",
   "scripts": {
-    "build": "browserify -r ./horiz-gauge.js:horiz-gauge -o ./bundle.js",
+    "build": "browserify -r ./horiz-gauge.js:horiz-gauge -o ./horiz-gauge-bundle.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
