--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Draw a svg horizontal progress gauge",
   "main": "horiz-gauge.js",
   "scripts": {
-    "build": "browserify -r ./horiz-gauge.js:horiz-gauge -o ./horiz-gauge-bundle.js",
+    "build": "browserify -r ./horiz-gauge.js:horiz-gauge -r autosize > ./horiz-gauge-bundle.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "acorn": "^6.0.4",
+    "autosize": "^4.0.2",
     "browserify": "^16.2.3",
     "coveralls": "^3.0.2",
     "documentation": "^9.1.1",
