--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "horiz-gauge",
-  "version": "0.10.2",
+  "version": "0.10.3",
   "description": "Draw a horizontal svg progress gauge",
   "main": "horiz-gauge.js",
   "scripts": {
@@ -26,7 +26,7 @@
   "bugs": {
     "url": "https://github.com/ulfschneider/horiz-gauge/issues"
   },
-  "homepage": "https://github.com/ulfschneider/horiz-gauge#readme",
+  "homepage": "https://ulf.codes/horiz-gauge",
   "dependencies": {
     "d3": "^5.9.7",
     "js-base64": "^2.5.1",
